cursor test/ minor tweaks

--- a/Calculator.css
+++ b/Calculator.css
@@ -1,10 +1,15 @@
 @font-face {
   font-family: nums;
   src: url(exo2-semibold.ttf); }
+@font-face {
+  font-family: chill;
+  src: url(IndieFlower.ttf); }
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0; }
+  * li {
+    user-select: none; }
   * body {
     height: 99vh;
     overflow: hidden; }
@@ -19,8 +24,9 @@
         box-shadow: 13px 15px 21px -2px rgba(0, 0, 0, 0.75);
         display: inline-block;
         height: 450px;
-        font-family: nums;
         width: 300px; }
+        * body #Container #Calculator #head_display:hover li {
+          opacity: 0; }
         * body #Container #Calculator #head_display {
           height: 15%;
           color: black;
@@ -28,37 +34,48 @@
         * body #Container #Calculator #num_ops {
           height: 85%;
           padding-top: 40px;
-          text-align: center; }
+          text-align: center;
+          user-select: none; }
           * body #Container #Calculator #num_ops #nums {
             display: inline-block;
             float: left;
+            font-family: chill;
             height: 80%;
+            margin-left: 15px;
             width: 70%; }
-            * body #Container #Calculator #num_ops #nums ul li {
-              border: 3px solid black;
-              color: black;
-              display: inline-block;
-              font-size: 40px;
-              margin-left: 20px;
-              text-align: center;
-              width: 20%;
-              list-style-type: none; }
+            * body #Container #Calculator #num_ops #nums ul {
+              margin-top: 5px; }
+              * body #Container #Calculator #num_ops #nums ul li {
+                border: 3px solid black;
+                color: black;
+                cursor: pointer;
+                z-index: 10;
+                display: inline-block;
+                font-size: 40px;
+                margin-right: 20px;
+                text-align: center;
+                width: 20%;
+                list-style-type: none; }
+            * body #Container #Calculator #num_ops #nums ul:first-child {
+              margin-top: 0px; }
           * body #Container #Calculator #num_ops #ops {
             background-color: black;
             color: white;
             display: inline-block;
             float: right;
+            font-family: nums;
             vertical-align: top;
             width: 20%; }
             * body #Container #Calculator #num_ops #ops ul {
               height: 100%;
               font-size: 30px;
               margin-left: 20px;
-              padding-top: 20px;
               text-align: center; }
               * body #Container #Calculator #num_ops #ops ul li:nth-child(3) {
-                font-size: 30px; }
+                font-size: 25px; }
               * body #Container #Calculator #num_ops #ops ul li {
-                list-style-type: none; }
+                list-style-type: none;
+                margin-top: 5px;
+                cursor: pointer; }
 
 /*# sourceMappingURL=Calculator.css.map */
