--- a/Calculator.scss
+++ b/Calculator.scss
@@ -2,11 +2,17 @@
     font-family: nums;
     src: url(exo2-semibold.ttf);
 }
+@font-face{
+    font-family:chill;
+    src: url(IndieFlower.ttf);
+}
 *{
     box-sizing:border-box;
     margin:0;
     padding:0;
-    
+    li{
+        user-select: none;
+    }
     body{
         height:99vh;
         overflow:hidden;
@@ -15,44 +21,66 @@
             padding:70px 0px;
             text-align: center;
             #Calculator{
-                background:linear-gradient(150deg,red, yellow,#1aff00  );
+                background:linear-gradient(150deg,red, yellow,#1aff00);
                 -webkit-box-shadow: 13px 15px 21px -2px rgba(0,0,0,0.75);
                 -moz-box-shadow: 13px 15px 21px -2px rgba(0,0,0,0.75);
                 box-shadow: 13px 15px 21px -2px rgba(0,0,0,0.75);
                 display:inline-block;
                 height:450px;
-                font-family: nums;
                 width:300px;
+                #head_display:hover{
+                    li{
+                        opacity:0;
+                    }
+                }
                 #head_display{
+//                    border:2px solid black;
                     height:15%;
                     color:black;
                     position:relative;
                 }
+                
                 #num_ops{
                 //  border:2px solid red;
                     height:85%;
                     padding-top:40px;
                     text-align: center;
+                    user-select: none;
                     #nums{
-                     //  border:2px solid blue;
+                      // border:2px solid blue;
                         display: inline-block;
                         float:left;
+                        font-family: chill;
                         height:80%;
+                        margin-left:15px;
                         width:70%;
                          ul{
-                           // border:2px solid grey;
+                            //border:2px solid grey;
+                            margin-top:5px;
+                             
                             li{
                                 border:3px solid black;
                                 color:black;
                                 //border-radius:50px;
+                                cursor:pointer;
+                                z-index:10;
                                 display:inline-block;
                                 font-size: 40px;
-                                margin-left:20px;
+                                
+                                margin-right:20px;
+                                
                                 text-align: center;
                                 width:20%;
                                 list-style-type: none; 
+                                
                             }
+                             
+                            
                         }
+                        ul:first-child{
+                                margin-top:0px; 
+                             }
+                        
                     }
                     #ops{
                         background-color:black;
@@ -60,6 +88,8 @@
 //                        border:2px solid white;
                         display:inline-block;
                         float:right;
+                        font-family: nums;
+                        //height:163px;
                       //  margin-top:20px;
                         vertical-align:top;
                         width:20%;
@@ -69,14 +99,18 @@
                             height:100%;
                             font-size:30px;
                             margin-left: 20px;
-                            padding-top: 20px;
                             text-align: center;
                             li:nth-child(3){
-                                font-size:30px;
+                                font-size:25px;
+                            }
+                            li:nth-child(4){
+                                //font-size:40px;
                             }
                             li{
+                                //border:1px solid grey;
                                 list-style-type: none;
-                               // margin-top:5px;
+                               margin-top:5px;
+                                cursor:pointer;
                             }
                         }
                     }
