--- a/Calculator.scss
+++ b/Calculator.scss
@@ -17,6 +17,7 @@
         height:99vh;
         overflow:hidden;
         #Container{  
+            font-family: chill;
             margin-top:50px;
             padding:70px 0px;
             text-align: center;
@@ -26,31 +27,42 @@
                 -moz-box-shadow: 13px 15px 21px -2px rgba(0,0,0,0.75);
                 box-shadow: 13px 15px 21px -2px rgba(0,0,0,0.75);
                 display:inline-block;
-                height:450px;
+                min-height:450px;
+                padding-bottom:20px;
                 width:300px;
-                #head_display:hover{
-                    li{
-                        opacity:0;
-                    }
-                }
+                
                 #head_display{
-//                    border:2px solid black;
-                    height:15%;
+                    //border:2px solid black;
                     color:black;
-                    position:relative;
+                    min-height:15%;
+                    
+                               
+                    li{
+                       // border:1px solid blue;
+                        padding-left:5px;
+                        padding-right:5px;
+                        #blinker{
+                            font-size : 20px;
+                        }
+                        #textBox{  
+                            //border:2px solid red;
+                            overflow-wrap:break-word;
+                            
+                        }
+                    }
                 }
                 
                 #num_ops{
-                //  border:2px solid red;
+                 border:2px solid red;
                     height:85%;
-                    padding-top:40px;
+                   // margin-top:80px;
+                    padding-top:30px;
                     text-align: center;
                     user-select: none;
                     #nums{
-                      // border:2px solid blue;
+                      border:2px solid blue;
                         display: inline-block;
                         float:left;
-                        font-family: chill;
                         height:80%;
                         margin-left:15px;
                         width:70%;
@@ -59,23 +71,28 @@
                             margin-top:5px;
                              
                             li{
-                                border:3px solid black;
-                                color:black;
+                               // border-bottom:3px solid black;
                                 //border-radius:50px;
+                                color:black;
                                 cursor:pointer;
-                                z-index:10;
+                                -webkit-box-shadow: 5px 2px 9px -2px rgba(0,0,0,0.51);
+                                -moz-box-shadow: 5px 2px 9px -2px rgba(0,0,0,0.51);
+                                box-shadow: 5px 2px 9px -2px rgba(0,0,0,0.51);
                                 display:inline-block;
                                 font-size: 40px;
-                                
+                                list-style-type: none; 
+                                user-select: none;
                                 margin-right:20px;
-                                
                                 text-align: center;
                                 width:20%;
-                                list-style-type: none; 
-                                
+                                z-index:10;
                             }
                              
-                            
+                             li:hover{
+                                background-color: black;
+                                border-bottom-color: white;
+                                color:white;
+                             }
                         }
                         ul:first-child{
                                 margin-top:0px; 
@@ -83,19 +100,19 @@
                         
                     }
                     #ops{
-                        background-color:black;
+                        //background-color:black;
+//                      border:2px solid white;
                         color:white;
-//                        border:2px solid white;
                         display:inline-block;
                         float:right;
                         font-family: nums;
                         //height:163px;
-                      //  margin-top:20px;
+                        //margin-top:20px;
                         vertical-align:top;
                         width:20%;
                         
                         ul{
-//                          border:2px solid blue;
+                         // border:2px solid blue;
                             height:100%;
                             font-size:30px;
                             margin-left: 20px;
@@ -107,10 +124,21 @@
                                 //font-size:40px;
                             }
                             li{
-                                //border:1px solid grey;
+                                background-color:black;
+                                border-bottom:3px solid black;
                                 list-style-type: none;
-                               margin-top:5px;
+                                margin-top:5px;
                                 cursor:pointer;
+                                user-select: none;
+                            }
+                            li:first-child{
+                                 margin-top:0px;
+                            }
+                            li:hover{
+                                border-bottom:3px solid white;
+                                background-color:white;
+                                color:black;
+
                             }
                         }
                     }
